<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/fragmentAboutPadding"
    tools:context="com.mobileappscompany.training.words.view.AboutFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/fragmentAboutTitleSizeFont"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightHorizontalSeparator"
        android:layout_marginBottom="@dimen/marginHorizontalSeparator"
        android:layout_marginTop="@dimen/marginHorizontalSeparator"
        android:background="@color/colorLightGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/f_about_author"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/f_about_date" />

</LinearLayout>