<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/recyclerCardPadding"
    card_view:cardCornerRadius="0dp">

    <LinearLayout
        android:id="@+id/rvItemLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rvItemRelative"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/rvItemPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/rvItemDescription"
                android:scaleType="centerCrop" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rvItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/recyclerTitlePadding"
                android:text="@string/placeholderText"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/recyclerTitleSize"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/recyclerInfoLinearMarginSmall"
                android:layout_marginRight="@dimen/recyclerInfoLinearMarginSmall">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/imageIconSize"
                        android:layout_height="@dimen/imageIconSize"
                        android:layout_gravity="bottom"
                        android:layout_margin="@dimen/imageIconMargin"
                        android:contentDescription="@string/rvPopularityDescription"
                        android:src="@drawable/ic_equalizer_black_48dp"
                        android:tint="@color/colorDarkDarkGray" />

                    <TextView
                        android:id="@+id/rvItemPopularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/placeholderText"
                        android:textColor="@color/colorDarkDarkGray"
                        android:textSize="@dimen/recyclerInfoSize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rvItemRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|bottom"
                        android:text="@string/placeholderText"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/recyclerInfoSize"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/imageIconSize"
                        android:layout_height="@dimen/imageIconSize"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/imageIconMargin"
                        android:contentDescription="@string/rvRatingDescription"
                        android:src="@drawable/ic_thumb_up_black_48dp"
                        android:tint="@color/colorAccent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/recyclerInfoLinearMargin"
                android:layout_marginBottom="0dp">

                <TextView
                    android:id="@+id/rvItemShortDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/placeholderText"
                    android:textSize="@dimen/recyclerOverviewSize" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
